fix: bad alignment in mobile

--- a/styles/ProductContainer.module.css
+++ b/styles/ProductContainer.module.css
@@ -14,6 +14,7 @@
 @media (max-width: 600px) {
   .container {
     margin: 0% 0px;
+    width: auto;
   }
 
   .container h2 {
@@ -21,6 +22,6 @@
   }
 
   .wrapper {
-    width: 100%;
+    width: auto;
   }
 }
