--- a/styles/ProductPage.module.css
+++ b/styles/ProductPage.module.css
@@ -14,5 +14,10 @@
 @media (max-width: 768px) {
   .container {
     height: auto;
+    width: auto;
+  }
+
+  .galery {
+    width: auto;
   }
 }
